--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -84,7 +84,7 @@
     
         <div class="order-4 px-4 sm:px-0 flex justify-between padding-vertical-2 py-2 sm:py-4 items-center bg-light dark:bg-dark border-b border-b-light-border dark:border-b-dark-border">
             <div class="w-[26%] md:w-[35%] flex justify-start md:justify-end">
-                <div (click)="changeChange24hSortingType()" class="hover:cursor-pointer flex gap-3 flex-row items-center w-fit">
+                <div (click)="changeChange24hSortingType()" class="hover:cursor-pointer flex gap-1 sm:gap-3 flex-row items-center w-fit">
                     <div class="flex flex-col">
                         <i class="{{change24hSorting.toString() === '0' && change24hSorting.toString() !== '2' ? 'text-sorting-green-light dark:text-sorting-green-dark' : 'text-dark-text2 dark:text-light-text2'}} pointer-events-none text-xs bi bi-caret-up-fill"></i>
                         <i class="{{change24hSorting.toString() === '1' && change24hSorting.toString() !== '2' ? 'text-sorting-green-light dark:text-sorting-green-dark' : 'text-dark-text2 dark:text-light-text2'}} pointer-events-none text-xs bi bi-caret-down-fill -translate-y-"></i>
@@ -93,7 +93,7 @@
                 </div>
             </div>
             <div class="w-[15%] md:w-[25%] flex justify-end">
-                <div (click)="changePriceSortingType()" class="flex gap-3 w-fit flex-row items-center hover:cursor-pointer">
+                <div (click)="changePriceSortingType()" class="flex gap-1 sm:gap-3 w-fit flex-row items-center hover:cursor-pointer">
                     <div class="flex flex-col">
                         <i class="{{priceSorting.toString() === '0' && priceSorting.toString() !== '2' ? 'text-sorting-green-light dark:text-sorting-green-dark' : 'text-dark-text2 dark:text-light-text2'}} pointer-events-none text-xs bi bi-caret-up-fill"></i>
                         <i class="{{priceSorting.toString() === '1' && priceSorting.toString() !== '2' ? 'text-sorting-green-light dark:text-sorting-green-dark' : 'text-dark-text2 dark:text-light-text2'}} pointer-events-none text-xs bi bi-caret-down-fill -translate-y-"></i>
@@ -102,7 +102,7 @@
                 </div>
             </div>
             <div class="flex flex-1 justify-end">
-                <div (click)="changeTitleSortingType()" class="flex gap-3 flex-row justify-end items-center hover:cursor-pointer">
+                <div (click)="changeTitleSortingType()" class="flex gap-1 sm:gap-3 flex-row justify-end items-center hover:cursor-pointer">
                     <div class="flex flex-col">
                         <i class="{{titleSorting.toString() === '0' && titleSorting.toString() !== '2' ? 'text-sorting-green-light dark:text-sorting-green-dark' : 'text-dark-text2 dark:text-light-text2'}} pointer-events-none text-xs bi bi-caret-up-fill"></i>
                         <i class="{{titleSorting.toString() === '1' && titleSorting.toString() !== '2' ? 'text-sorting-green-light dark:text-sorting-green-dark' : 'text-dark-text2 dark:text-light-text2'}} pointer-events-none text-xs bi bi-caret-down-fill -translate-y-"></i>
