--- a/src/app/pages/gold-calculator/gold-calculator.component.html
+++ b/src/app/pages/gold-calculator/gold-calculator.component.html
@@ -83,7 +83,7 @@
                             (input)="onGoldInputChange($event)"
                             type="text"
                             commafyNumber
-                            class="input-base rtl {{ !gram18Value ? 'skeleton-base' : '' }}"
+                            class="input-base rtl {{ !gram18Value ? 'skeleton-base' : 'animate-none' }}"
                         >
                     </div>
                 </div>
