--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -38,7 +38,7 @@
         <nav class="md:flex hidden">
             <ol class="flex flex-row-reverse gap-6">
                 <li>
-                    <a class="menu-item-base {{ currentRoute() == '/' ? 'text-light-green-text dark:text-dark-green-text' : '' }}" routerLink="/">صفحه اصلی
+                    <a [routerLinkActiveOptions]="{ exact: true }" routerLinkActive="text-light-green-text dark:text-dark-green-text" class="menu-item-base" routerLink="/">صفحه اصلی
                         <svg class="home-item-base" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M22 12.2039V13.725C22 17.6258 22 19.5763 20.8284 20.7881C19.6569 22 17.7712 22 14 22H10C6.22876 22 4.34315 22 3.17157 20.7881C2 19.5763 2 17.6258 2 13.725V12.2039C2 9.91549 2 8.77128 2.5192 7.82274C3.0384 6.87421 3.98695 6.28551 5.88403 5.10813L7.88403 3.86687C9.88939 2.62229 10.8921 2 12 2C13.1079 2 14.1106 2.62229 16.116 3.86687L18.116 5.10812C20.0131 6.28551 20.9616 6.87421 21.4808 7.82274" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
                             <path d="M15 18H9" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
@@ -46,7 +46,7 @@
                     </a>
                 </li>
                 <li>
-                    <a class="menu-item-base {{ currentRoute() == '/converter' ? 'text-light-green-text dark:text-dark-green-text' : '' }}" routerLink="/converter">مبدل ارز
+                    <a class="menu-item-base" routerLinkActive="text-light-green-text dark:text-dark-green-text" routerLink="/converter">مبدل ارز
                         <svg viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
                             <g id="Layer_2" data-name="Layer 2">
                                 <g id="invisible_box" data-name="invisible box">
@@ -62,7 +62,7 @@
                     </a>
                 </li>
                 <li>
-                    <a class="menu-item-base {{ currentRoute() == '/gold-calculator' ? 'text-light-green-text dark:text-dark-green-text' : '' }}" routerLink="/gold-calculator">محاسبه‌گر طلا
+                    <a class="menu-item-base" routerLinkActive="text-light-green-text dark:text-dark-green-text" routerLink="/gold-calculator">محاسبه‌گر طلا
                         <svg
                             viewBox="0 0 24 24"
                             fill="none" xmlns="http://www.w3.org/2000/svg">
