Currency Item colors changed

--- a/src/app/components/not-shared/currency-item-details/chart/chart.component.html
+++ b/src/app/components/not-shared/currency-item-details/chart/chart.component.html
@@ -1,4 +1,4 @@
-<div class="relative flex flex-col w-full h-full bg-light2 dark:bg-theme-black rounded-lg overflow-hidden font-sans mb-6 lg:mb-10">
+<div class="relative flex flex-col w-full h-full bg-light-hover dark:bg-theme-black rounded-lg overflow-hidden font-sans mb-6 lg:mb-10">
   
     <div #toggleFrameBtn class="{{ historyData() ? 'flex flex-row-reverse' : 'hidden' }} gap-4 relative justify-between px-5 py-3 border-b border-light-text3 dark:border-dark-text3">
 
