--- a/src/app/components/not-shared/currency-item-details/item-info/item-info.component.html
+++ b/src/app/components/not-shared/currency-item-details/item-info/item-info.component.html
@@ -1,4 +1,4 @@
-<div class="my-6 leading-[180%] flex-1 justify-center md:justify-between flex w-full px-4 py-3 bg-light-hover dark:bg-dark-text rounded-lg {{ item ? 'block' : 'hidden' }}">
+<div class="my-6 leading-[180%] flex-1 justify-center md:justify-between flex w-full px-4 py-3 bg-light-text dark:bg-dark-text rounded-lg {{ item ? 'block' : 'hidden' }}">
     
     <!-- Mobile -->
     <div class="flex md:hidden flex-col w-full">
