--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="fixed z-[3] bg-light2 dark:bg-dark2 w-full h-16 flex items-center justify-between border-b border-b-light-border dark:border-b-dark-border mx-auto px-4 lg:px-18 xl:px-41">
+<header class="fixed z-[3] bg-light2 dark:bg-dark2 w-full h-16 flex items-center justify-between border-b border-b-light-border3 dark:border-b-dark-border3 mx-auto px-4 lg:px-18 xl:px-41">
     <div class="w-6 h-6 cursor-pointer overflow-hidden" (click)="changeTheme()">
         @if (themeService.getStringTheme() === 'light') {
             <svg
