--- a/src/app/pages/converter/converter.component.html
+++ b/src/app/pages/converter/converter.component.html
@@ -1,4 +1,4 @@
-<main class="min-h-[var(--screen-height)] w-full bg-theme-white dark:bg-theme-black gap-4 flex items-center px-4 pt-20 pb-6 flex-col lg:px-18 lg:pb-8 lg:pt-24 xl:pt-29 xl:px-41 xl:pb-16">
+<main class="min-h-[var(--screen-height)] w-full bg-light2 dark:bg-dark2 gap-4 flex items-center px-4 pt-20 pb-6 flex-col lg:px-18 lg:pb-8 lg:pt-24 xl:pt-29 xl:px-41 xl:pb-16">
     
     <div class="2xl:flex-row-reverse flex-col max-w-[1440px] flex-1 w-full flex gap-4 h-full">
         <div class="flex flex-col h-fit items-end border border-light-border2 dark:border-dark-border2 rounded-lg p-2 md:p-4 gap-3 md:gap-4">
