--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="min-h-16 bg-light2 py-2 dark:bg-dark2 w-full border-t border-t-light-border dark:border-t-dark-border flex-col flex items-start justify-between mx-auto px-4 lg:px-18 xl:px-41">
+<footer class="min-h-16 bg-light py-2 dark:bg-dark w-full border-t border-t-light-border dark:border-t-dark-border flex-col flex items-start justify-between mx-auto px-4 lg:px-18 xl:px-41">
     <div class="flex items-center h-full gap-4 flex-row justify-between w-full">
         <div class="h-full flex items-center w-auto gap-1.5">
             <span class="flex flex-row-reverse gap-1 items-end">
