Project issues fixed

--- a/src/app/components/not-shared/currency-item-details/percent-progress/percent-progress.component.html
+++ b/src/app/components/not-shared/currency-item-details/percent-progress/percent-progress.component.html
@@ -7,8 +7,8 @@
             <p class="dark:text-white text-dark text-sm md:text-xs lg:text-sm font-normal leading-[180%]">{{ currentMinPrice() }}</p>
         </div>
     </div>
-    <div class="w-full md:w-50 h-2 md:mx-2 rounded-2xl bg-light-border2 dark:bg-dark-border2 mb-2">
-        <div [style.width]="currentPercentMinMax()" class="h-full flex justify-start bg-light-text2 dark:bg-dark-text2 rounded-2xl">
+    <div class="w-full md:w-50 h-2 md:mx-2 rounded-2xl bg-light-border4 dark:bg-dark-border4 mb-2">
+        <div [style.width]="currentPercentMinMax()" class="h-full flex justify-start bg-dark-border5 dark:bg-light-border5 rounded-2xl">
             
         </div>
     </div>
