Star Icon issues fixed

--- a/src/app/components/shared/star-icon/star-icon.component.html
+++ b/src/app/components/shared/star-icon/star-icon.component.html
@@ -1,9 +1,8 @@
 <svg
     xmlns="http://www.w3.org/2000/svg"
-    class="w-full h-full duration-500 transition {{selected ? 'stroke-dark dark:stroke-light' : 'stroke-light-text2 dark:stroke-dark-text2'}}"
+    class="w-full h-full duration-300 ease-in {{ selected ? 'stroke-dark dark:stroke-light' : 'stroke-light-text2 dark:stroke-dark-text2'}}"
     fill="none"
     viewBox="0 0 24 24"
-    color="#B2B2B2"
     class="_price__currency__favorite-seciton__icon_8mcq0_600 size-4"
     >
     <path
