--- a/src/app/components/not-shared/home/currency-item/currency-item.component.html
+++ b/src/app/components/not-shared/home/currency-item/currency-item.component.html
@@ -34,21 +34,25 @@
             <img draggable="false" loading="lazy" decoding="async" class="md:w-8 md:h-8 w-6 h-6 object-cover rounded-full mr-2 mt-1" src="{{currencyItem?.img}}" alt="{{currencyItem?.title}}">
         
             <div class="flex">
-                <span *ngIf="currencyItem?.isFav" class="w-6 h-7" (click)="removeFromFav($event)">
-                    <span class="w-6 h-7 flex justify-end items-center sm:items-end">
-                        <svg xmlns="http://www.w3.org/2000/svg"
-                            fill="none" viewBox="0 0 24 24"
-                            class="w-4 h-4 fill-yellow-star"
-                        >
-                            <path
-                                d="m13.73 3.51 1.76 3.52c.24.49.88.96 1.42 1.05l3.19.53c2.04.34 2.52 1.82 1.05 3.28l-2.48 2.48c-.42.42-.65 1.23-.52 1.81l.71 3.07c.56 2.43-.73 3.37-2.88 2.1l-2.99-1.77c-.54-.32-1.43-.32-1.98 0l-2.99 1.77c-2.14 1.27-3.44.32-2.88-2.1l.71-3.07c.13-.58-.1-1.39-.52-1.81l-2.48-2.48c-1.46-1.46-.99-2.94 1.05-3.28l3.19-.53c.53-.09 1.17-.56 1.41-1.05l1.76-3.52c.96-1.91 2.52-1.91 3.47 0">
-                            </path>
-                        </svg>
+                @if (currencyItem?.isFav) {
+                    <span class="w-6 h-7" (click)="removeFromFav($event)">
+                        <span class="w-6 h-7 flex justify-end items-center sm:items-end">
+                            <svg xmlns="http://www.w3.org/2000/svg"
+                                fill="none" viewBox="0 0 24 24"
+                                class="w-4 h-4 fill-yellow-star"
+                            >
+                                <path
+                                    d="m13.73 3.51 1.76 3.52c.24.49.88.96 1.42 1.05l3.19.53c2.04.34 2.52 1.82 1.05 3.28l-2.48 2.48c-.42.42-.65 1.23-.52 1.81l.71 3.07c.56 2.43-.73 3.37-2.88 2.1l-2.99-1.77c-.54-.32-1.43-.32-1.98 0l-2.99 1.77c-2.14 1.27-3.44.32-2.88-2.1l.71-3.07c.13-.58-.1-1.39-.52-1.81l-2.48-2.48c-1.46-1.46-.99-2.94 1.05-3.28l3.19-.53c.53-.09 1.17-.56 1.41-1.05l1.76-3.52c.96-1.91 2.52-1.91 3.47 0">
+                                </path>
+                            </svg>
+                        </span>
                     </span>
-                </span>
-                <span *ngIf="!currencyItem?.isFav" class="w-6 h-7 flex justify-end items-center sm:items-end" (click)="addToFav($event)">
-                    <star-icon [selected]="!currencyItem?.isFav" class="w-4 h-4 text-dark dark:text-light" />
-                </span>
+                }
+                @else {
+                    <span class="w-6 h-7 flex justify-end items-center sm:items-end" (click)="addToFav($event)">
+                        <star-icon [selected]="false" class="w-4 h-4 text-dark dark:text-light" />
+                    </span>
+                }
             </div>
         </div>
     </div>
